--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,44 @@ body {
   display: block;
   text-align: center;
 }
+
+.logo img {
+  width: 75px;
+  transition: all 0.3s; /*плавность*/
+}
+
+.logo:hover img {
+  transform: rotate(720deg) scale(0.5); /* Трансформация */
+}
+
+.search {
+  position: relative; /* указывает, что будет привязка для дочернего элемента */
+}
+
+.search input {
+  padding: 10px 15px 10px 45px;
+  font: 16px Mija, sans-serif; /* Обязательные значения*/
+  border-radius: 7px;
+  border: none;
+  outline: none;
+  transition: all 0.3s;
+}
+
+.search input:focus {
+  box-shadow: inset 0 0 10px 0px rgba(109, 0, 0, 0.8);
+}
+
+.search button {
+  background: url("../images/search.svg") no-repeat center center;
+  background-size: cover;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+
+  width: 30px;
+  height: 30px;
+
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
